# NaiveRAG

./: .gitignore  README.md  ingest_document.py  main.py  pyproject.toml  test_system.py
src/: document_processing.py  embedder.py  llm_client.py
