[project]
name = "legalrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-qdrant>=0.1.0",
    "unstructured[all-docs]>=0.15.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.11.0",
    "streamlit>=1.38.0",
    "pydantic>=2.8.0",
    "rich>=13.7.0",
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.0"
]
[tool.uv]
